--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "express": "^4.18.2"
+  },
+  "dependencies": {
+    "mongoose": "^6.8.1"
   }
 }
